# Mesh-Simplification

./: readme.txt
OpenGL/Libraies/includes/glad/: glad.h
OpenGL/Libraies/includes/learnopengl/: mesh.h  model.h  shader_s.h
OpenGL/Libraies/libs/libglfw3/: __.SYMDEF SORTED
Simplification/: CMakeLists.txt  glad.c  glm.c  light.fs  light.vs  main.cpp  shader.vs  simplification.cpp  simplification.h  test.cpp
Simplification/model/: mesh.h  model.h  objLoader.h
